--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,9 +52,9 @@ h1 {
 }
 
 a {
-	color: $bluegreen !important;
+	color: $primaryLink;
 	&:hover {
-		color: $peach !important;
+		color: $primaryLinkHover;
 	};
 }
 
